--- a/about.html
+++ b/about.html
@@ -49,24 +49,22 @@
           <h3 class="text-secondary">
            BIO 
           </h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ex facere reprehenderit hic ducimus distinctio iure dolore repudiandae doloribus, sit molestias adipisci quasi in ipsam nesciunt quisquam tenetur laboriosam aspernatur!</p>
-
-          
+          <p>Software engineer with more than 2 years of  experience in developing web-based
+          applications. Likes problem solving with
+          the algorithmic skills I have and writing
+          efficient, maintainable, and reusable code.
+          </p>
         </div>
         <div class="job job-1">
-          <h3>123 Webshop</h3>
-          <h6>Full Stack Developer</h6>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sapiente, veritatis soluta modi facere, optio voluptatibus nulla in est, dolore cumque! Maxime odit magnam quis sit voluptatibus officia eveniet asperiores!</p>
+          <h3>Tata Consultancy Services</h3>
+          <h5>Full Stack Developer <small>(July 2019 - Current)</small></h5>
+          <p>The Job requirment includes building services in JAVA using Spring MVC & Spring Boot framework handling Database operation using SQL & PL/SQL, Front End Development using HTML5, CSS3, JS, JQuery, JSP and many other plug-ins and frameworks <br>
+          Integration of CI CD tools like Maven, Jenkins, Artifactory, Ansible, XLR</p>
         </div>
         <div class="job job-2">
-          <h3>Designers ABC</h3>
-          <h6>Front End Developer</h6>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sapiente, veritatis soluta modi facere, optio voluptatibus nulla in est, dolore cumque! Maxime odit magnam quis sit voluptatibus officia eveniet asperiores!</p>
-        </div>
-        <div class="job job-3">
-          <h3>123 Webshop</h3>
-          <h6>Graphic Desingner</h6>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque sapiente, veritatis soluta modi facere, optio voluptatibus nulla in est, dolore cumque! Maxime odit magnam quis sit voluptatibus officia eveniet asperiores!</p>
+          <h3>National Institute of Indutrial Training</h3>
+          <h5>Java Programming <small>(Dec 2017 - Jan 2018)</small></h5>
+          <p>Learnt Java programming from scratch to intermediate level by regular hands on experience and a real time project on minified version of banking system and user operations.</p>
         </div>
       </div>
     </main>
