--- a/work.html
+++ b/work.html
@@ -44,57 +44,35 @@
       <h2 class="sm-heading">Check out some of my projects</h2>
       <div class="projects">
         <div class="item">
-          <a href="#!">
-            <img src="img/projects/project1.jpg" alt="project">
+          <a href="https://codepen.io/kmohit5/full/ExyYGpG">
+            <img src="img/projects/pac-man-project.png" alt="project">
           </a>
-          <a href="#" class="btn-light">
-            <i class="fas fa-eye"></i> Project
+          <a href="https://codepen.io/kmohit5/full/ExyYGpG" class="btn-light">
+            <i class="fas fa-eye"></i> Gridbased Pacman Game using JS
           </a>
-          <a href="#" class="btn-dark">
+          <a href="https://github.com/kumarmohit19/gridbased-pacman" class="btn-dark">
             <i class="fab fa-github"></i> Github
           </a>
         </div>
         <div class="item">
-          <a href="#!">
-            <img src="img/projects/project1.jpg" alt="project">
+          <a href="https://codepen.io/kmohit5/full/ExKLeqZ">
+            <img src="img/projects/dashborad-template.png" alt="project">
           </a>
-          <a href="#" class="btn-light">
-            <i class="fas fa-eye"></i> Project
+          <a href="https://codepen.io/kmohit5/full/ExKLeqZ" class="btn-light">
+            <i class="fas fa-eye"></i> Dashboard Template in Bootstrap
           </a>
-          <a href="#" class="btn-dark">
+          <a href="https://github.com/kumarmohit19/graphical-dashboard-bootstrap" class="btn-dark">
             <i class="fab fa-github"></i> Github
           </a>
         </div>
         <div class="item">
-          <a href="#!">
-            <img src="img/projects/project1.jpg" alt="project">
+          <a href="https://githubfinder19041997.netlify.app/">
+            <img src="img/projects/github-finder.png" alt="project">
           </a>
-          <a href="#" class="btn-light">
-            <i class="fas fa-eye"></i> Project
+          <a href="https://githubfinder19041997.netlify.app/" class="btn-light">
+            <i class="fas fa-eye"></i> Github Finder App using React
           </a>
-          <a href="#" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
-          <a href="#!">
-            <img src="img/projects/project1.jpg" alt="project">
-          </a>
-          <a href="#" class="btn-light">
-            <i class="fas fa-eye"></i> Project
-          </a>
-          <a href="#" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
-          <a href="#!">
-            <img src="img/projects/project1.jpg" alt="project">
-          </a>
-          <a href="#" class="btn-light">
-            <i class="fas fa-eye"></i> Project
-          </a>
-          <a href="#" class="btn-dark">
+          <a href="https://github.com/kumarmohit19/github-finder-learning" class="btn-dark">
             <i class="fab fa-github"></i> Github
           </a>
         </div>
