--- a/about.html
+++ b/about.html
@@ -57,12 +57,17 @@
           </p>
         </div>
         <div class="job job-1">
+          <h3>Oracle India Pvt. Ltd.</h3>
+          <h5>Application Engineer <small>(Jan 2021 - Current)</small></h5>
+          <p>Working as Application Engineer on Oracle General Ledger Project</p>
+        </div>
+        <div class="job job-2">
           <h3>Tata Consultancy Services</h3>
-          <h5>Full Stack Developer <small>(July 2019 - Current)</small></h5>
+          <h5>Full Stack Developer <small>(July 2019 - Dec 2020)</small></h5>
           <p>The Job requirment includes building services in JAVA using Spring MVC & Spring Boot framework handling Database operation using SQL & PL/SQL, Front End Development using HTML5, CSS3, JS, JQuery, JSP and many other plug-ins and frameworks <br>
           Integration of CI CD tools like Maven, Jenkins, Artifactory, Ansible, XLR</p>
         </div>
-        <div class="job job-2">
+        <div class="job job-3">
           <h3>National Institute of Indutrial Training</h3>
           <h5>Java Programming <small>(Dec 2017 - Jan 2018)</small></h5>
           <p>Learnt Java programming from scratch to intermediate level by regular hands on experience and a real time project on minified version of banking system and user operations.</p>
