--- a/work.html
+++ b/work.html
@@ -44,94 +44,7 @@
       <h2>
       <h2 class="sm-heading">Check out some of my projects</h2>
       <div class="projects">
-        <div class="item">
-          <a href="https://dev2devsocialconnector.herokuapp.com/" target="_blank">
-            <img src="img/projects/devConnector.png" alt="project">
-          </a>
-          <a href="https://dev2devsocialconnector.herokuapp.com/" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> DevConnector/MERN social media app 
-          </a>
-          <a href="https://github.com/kumarmohit19/DevConnector" class="btn-dark" target="_blank">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
-          <a href="https://care-hospital-app.netlify.app/#/allAppointments" target="_blank">
-            <img src="img/projects/care-hospital.png" alt="project">
-          </a>
-          <a href="https://care-hospital-app.netlify.app/#/allAppointments" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Hospital Website using React
-          </a>
-          <a href="https://github.com/kumarmohit19/care-hospital" class="btn-dark" target="_blank">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
-          <a href="https://techcubeapp.herokuapp.com" target="_blank">
-            <img src="img/projects/tech-cube.png" alt="project">
-          </a>
-          <a href="https://techcubeapp.herokuapp.com" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> E-Commerce MERN Application
-          </a>
-          <a href="https://github.com/kumarmohit19/techcube-mernshop-app" class="btn-dark" target="_blank">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
-          <a href="https://imgur-image-store.netlify.app" target="_blank">
-            <img src="img/projects/imgur-photo-gallery.png" alt="project">
-          </a>
-          <a href="https://imgur-image-store.netlify.app/" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Imgur Photo Gallery
-          </a>
-          <a href="https://github.com/kumarmohit19/imgur-image-store" class="btn-dark" target="_blank">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
-          <a href="https://codepen.io/kmohit5/full/ExyYGpG" target="_blank">
-            <img src="img/projects/pac-man-project.png" alt="project">
-          </a>
-          <a href="https://codepen.io/kmohit5/full/ExyYGpG" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Gridbased Pacman Game using JS
-          </a>
-          <a href="https://github.com/kumarmohit19/gridbased-pacman" class="btn-dark" target="_blank">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
-          <a href="https://codepen.io/kmohit5/full/ExKLeqZ" target="_blank">
-            <img src="img/projects/dashborad-template.png" alt="project">
-          </a>
-          <a href="https://codepen.io/kmohit5/full/ExKLeqZ" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Dashboard Template in Bootstrap
-          </a>
-          <a href="https://github.com/kumarmohit19/graphical-dashboard-bootstrap" class="btn-dark" target="_blank">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
-          <a href="https://githubfinder19041997.netlify.app/" target="_blank">
-            <img src="img/projects/github-finder.png" alt="project">
-          </a>
-          <a href="https://githubfinder19041997.netlify.app/" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Github Finder App using React
-          </a>
-          <a href="https://github.com/kumarmohit19/github-finder-learning" class="btn-dark" target="_blank">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-        <div class="item">
-          <a href="https://devloggerapp.netlify.app/" target="_blank">
-            <img src="img/projects/devlogger-angular.png" alt="project">
-          </a>
-          <a href="https://devloggerapp.netlify.app/" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Dev Logger App using Angular
-          </a>
-          <a href="https://github.com/kumarmohit19/DevLogger" class="btn-dark" target="_blank">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
+        <h3>Loading Projects...</h3>
       </div>
     </main>
 
@@ -140,5 +53,6 @@
     </footer>
 
   <script src="js/main.js"></script>
+  <script src="js/work_project.js"></script>
   </body>
 </html>
